# rkwhisper

./: Cargo.toml  README.md  pywhisper-client.py
.github/workflows/: ci.yaml  release.yaml
notes/: CONCURRENCY_PLAN.md  MULTI_THREADED_PIPELINE.md  PYTHON_CLIENT_DESIGN.md  SUMMARY.md  TEST_PLAN_PYTHON.md
proto/: rkwhisper.proto
rkwhisper/: Cargo.toml
rkwhisper-bench/: pyproject.toml
rkwhisper-bench/debian/: changelog  control  copyright  rules
rkwhisper-bench/src/rkwhisper_bench/: cli.py  librispeech.py
rkwhisper-client/: Cargo.toml
rkwhisper-client/examples/: async_client.rs
rkwhisper-client/src/: lib.rs
rkwhisper-protocol/: Cargo.toml
rkwhisper-protocol/src/: lib.rs
rkwhisper-python/: Cargo.toml  pyproject.toml
rkwhisper-python/debian/: changelog  control  copyright  rules
rkwhisper-python/python/rkwhisper_client/: __init__.py  rkwhisper_client.pyi
rkwhisper-python/src/: lib.rs
rkwhisper-python/tests/: conftest.py  test_async.py  test_connection.py  test_inference.py
rkwhisper/debian/: rkwhisper.toml  rkwhisperd.service
rkwhisper/debian/maintainer-scripts/: postinst  postrm
rkwhisper/src/: beam.rs  daemon.rs  daemon_stream.rs  decoder.rs  encoder.rs  lib.rs  parallel.rs  spec.rs  suppression.rs  vad.rs  whisper.rs
src/: beam.rs  cache.rs  daemon.rs  decoder.rs  encoder.rs  lib.rs  main.rs  markers.rs  parallel.rs  protocol.rs  spec.rs  suppression.rs  vad.rs  whisper.rs
