[package]
name = "rkwhisper"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.99", features = ["backtrace"] }
clap = { version = "4.5.45", features = ["derive"] }
hound = "3.5.1"
rknpu2 = { version = "0.0.7", features = ["libloading", "rk3576"] }
rustix = { version = "1.1.3", features = ["fs", "mm", "net"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokenizers = { version = "0.21.4", default-features = false, features = ["onig"] }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
toml = "0.8"
