[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rkwhisper-bench"
version = "0.1.0"
description = "LibriSpeech WER/RTF benchmark for rkwhisperd"
requires-python = ">=3.10"
dependencies = [
    "rkwhisper-client",
    "jiwer",
    "soundfile",
    "numpy",
]

[project.scripts]
rkwhisper-bench = "rkwhisper_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/rkwhisper_bench"]
