[package]
name = "rkwhisper-client"
version = "0.1.0"
edition = "2024"

[dependencies]
rkwhisper-protocol = { path = "../rkwhisper-protocol", features = ["async"] }
anyhow = "1.0"
rustix = { version = "1.1.3", features = ["fs", "mm", "net"] }
tokio = { version = "1", features = ["net", "rt", "sync", "time"], optional = true }

[features]
default = ["async"]
async = ["tokio"]
