[package]
name = "rkwhisper-python"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[lib]
name = "rkwhisper_client"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
client = { package = "rkwhisper-client", path = "../rkwhisper-client", features = ["async"] }
rkwhisper-protocol = { path = "../rkwhisper-protocol" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
