[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rkwhisper-client"
version = "0.1.0"
description = "Python client for the rkwhisper daemon"
requires-python = ">=3.10"
authors = [
    { name = "Boyd Johnson" }
]
dependencies = []

[tool.maturin]
module-name = "rkwhisper_client"
features = ["pyo3/extension-module"]
python-source = "python"
